# Health---Speed-Checker

./: .env.example  .eslintrc.json  .gitignore  AI_AGENT_INSTRUCTIONS.md  BUILD_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  FINAL_ADDITIONS.md  FREEMIUM_MODEL_IMPLEMENTATION.md  Health & Speed Checker.txt  Health Checker Project Analysis and Expansion.md  INTEGRATION_COMPLETE.md  JULES_BUILD_FIX.md  LAUNCH_POSTS.md  LAUNCH_READY.md  LICENSE  New Text Document.txt  PROJECT_COMPLETE.md  PROJECT_INSTRUCTIONS.md  QUICK_START.md  QUICK_TEST.bat  README.md  SECURITY.md  START_HERE.md  TEST_AND_LAUNCH.ps1  package.json  pt2.txt
.github/: AUTOMATION_GUIDE.md  QUICK_REFERENCE.md  SETUP_AUTO_MERGE.md  auto-merge-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai-review.yml  auto-merge.yml  ci.yml  code-quality-dashboard.yml  dependabot-automerge.yml  performance-benchmark.yml  stale-manager.yml
agent/: Cargo.toml  scan_output.json
agent/db/: schema.sql
agent/src/: daemon.rs  db.rs  lib.rs  license.rs  main.rs
agent/src/checkers/: bloatware.rs  bottleneck.rs  mod.rs  network.rs  smart_disk.rs  storage.rs
agent/src/util/: command.rs
agent/tests/: checker_tests.rs  integration_test.rs
ai report audit cursor/: # Full Project Audit - Health & Spe.txt  AUDIT_REPORT.md  CODE_REVIEW_HIGHLIGHTS.md  EXECUTIVE_SUMMARY.md  FIX_CHECKLIST.md  FULL_PROJECT_AUDIT.md  FULL_PROJECT_AUDIT_REPORT.md  INDEX.md  README.md
ai report audit cusor/: AUDIT_REPORT.md
db/: schema.sql
scripts/: dev.bat  dev.sh
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  vite.config.ts
ui/src/: App.css  App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs  tray.rs
ui/src/components/: AutomationPage.tsx  BottleneckReport.tsx  ChangelogPage.tsx  ExportDialog.css  ExportDialog.tsx  LicenseDialog.css  LicenseDialog.tsx  QuickActions.css  QuickActions.tsx  TrendsChart.css  TrendsChart.tsx
ui/src/hooks/: useKeyboardShortcuts.ts
