[package]
name = "health_speed_checker"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Privacy-first PC health and speed checker"
license = "MIT"
repository = "https://github.com/yourusername/health-speed-checker"

[lib]
name = "health_speed_checker"
path = "src/lib.rs"

[[bin]]
name = "health-checker"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Database
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"], optional = true }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# System information
sysinfo = "0.30"
systemstat = "0.2"

# Network utilities
ureq = "2.9"  # Lightweight HTTP client for speed tests

# Parallel processing
rayon = "1.8"  # Parallel iterators for port scanning

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_Security",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",  # For network adapter enumeration
    "Win32_System_ProcessStatus",
    "Win32_System_Performance",
]}
winreg = "0.52"

# macOS-specific
[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.5"
core-foundation = "0.9"

# Linux-specific
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

# Optional features
[features]
default = []
daemon = ["sqlx"]
telemetry = []

# Build optimizations
[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

# Development dependencies
[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
criterion = "0.5"

[[bench]]
name = "scanner_bench"
harness = false
