[package]
name = "health-speed-checker-ui"
version = "0.1.0"
description = "Health & Speed Checker Desktop Application"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/health-speed-checker"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Reference to our core agent library
health_speed_checker = { path = "../../agent" }

# Tauri
tauri = { version = "1.5", features = [
    "shell-open",
    "dialog-ask",
    "dialog-confirm",
    "dialog-message",
    "dialog-save",
    "fs-create-dir",
    "fs-exists",
    "fs-read-dir",
    "fs-read-file",
    "fs-write-file",
    "notification-all",
    "process-exit",
    "process-relaunch",
    "clipboard-write-text",
    "protocol-asset",
    "system-tray"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# System utilities
hostname = "0.3"

# PDF generation
printpdf = "0.7"  # PDF export functionality
base64 = "0.21"   # Base64 encoding for PDF export

[features]
# By default, Tauri runs in production mode when you build
default = ["custom-protocol"]
# This feature is used for production builds where `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
